--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ plotly = "^5.18.0"
 scipy = "^1.11.4"
 scikit-learn = "^1.3.2"
 pandas = "^2.1.3"
-tensorboard = "*"
 jupyter = "^1.0.0"
 seaborn = "^0.13.0"
 epiweeks = "^2.2.0"
@@ -25,8 +24,8 @@ sqlalchemy = "^2.0.23"
 pyarrow = "^14.0.1"
 psycopg2-binary = "^2.9.9"
 pydot = "^1.4.2"
-tensorflow = "*"
-protobuf = "^4.25.1"
+protobuf = "*"
+tensorboard = "*"
 
 
 [build-system]
